--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.3",
-    "@astrojs/tailwind": "^5.1.5",
-    "@contentful/rich-text-html-renderer": "^16.6.10",
+    "@astrojs/react": "^4.3.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@contentful/rich-text-html-renderer": "^17.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
-    "astro": "^4.16.19",
+    "@tailwindcss/postcss": "^4.1.13",
+    "astro": "^5.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentful": "^10.15.1",
-    "lucide-react": "^0.363.0",
-    "moment-timezone": "^0.5.48",
-    "motion": "^10.18.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sharp": "^0.33.5",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
+    "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sharp": "^0.34.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20.19.11",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.9.2"
   },
   "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
