--- a/package.json
+++ b/package.json
@@ -24,14 +24,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
-    "motion": "^12.23.22",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@types/node": "^24.7.0",
