--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "bun install",
+  "installCommand": "pnpm install",
   "buildCommand": "astro build",
   "outputDirectory": "dist",
   "github": {
