--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,10 +17,10 @@
           - name: Install, build, and upload your site
             uses: withastro/action@v3
             # Optional: Configure the action with specific paths, Node.js version, or package manager
-            with:
-              path: . # The root location of your Astro project inside the repository.
-              node-version: 22 # The specific version of Node that should be used to build your site.
-              package-manager: bun@1.2.23 # The Node package manager to use.
+            # with:
+            #   path: . # The root location of your Astro project inside the repository.
+            #   node-version: 22 # The specific version of Node that should be used to build your site.
+            #   package-manager: pnpm@latest # The Node package manager to use.
       deploy:
         needs: build
         runs-on: ubuntu-latest
