--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "pnpm@10.18.1"
 }
