change svgs, navigation menu on small screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "jsxImportSource": "react",
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
-    "noEmit": true,
+    "emitDeclarationOnly": true,
     "target": "ESNext",
     "module": "ESNext",
     "baseUrl": ".",
